Update make_figures notebook and regenerated figures

--- a/src/make_figures.ipynb
+++ b/src/make_figures.ipynb
@@ -9,9 +9,297 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "dl_df = pd.read_csv(\"dl_df.csv\")\n",
-    "lb_df = pd.read_csv(\"lb_df.csv\")\n",
-    "db_df = pd.read_csv(\"db_df.csv\")"
+    "dl_df = pd.read_csv(\"../results/dl_df.csv\")\n",
+    "lb_df = pd.read_csv(\"../results/lb_df.csv\")\n",
+    "db_df = pd.read_csv(\"../results/db_df.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import colors\n",
+    "import matplotlib.patheffects as pe\n",
+    "\n",
+    "# -------- data --------\n",
+    "df = lb_df.copy()\n",
+    "\n",
+    "x = df[\"tackleOpportunities\"].astype(float).to_numpy()\n",
+    "y = df[\"Average SITR\"].astype(float).to_numpy()\n",
+    "tot = df[\"Total SITR\"].astype(float).to_numpy()\n",
+    "names = df[\"displayName\"].to_numpy()\n",
+    "\n",
+    "# bubble size (robust scaling)\n",
+    "smin, smax = np.percentile(tot, [5, 95])\n",
+    "sizes = 50 + 1500 * (np.clip(tot, smin, smax) - smin) / (smax - smin + 1e-9)\n",
+    "\n",
+    "# color by Average SITR\n",
+    "cmap = plt.get_cmap(\"turbo\") if \"turbo\" in plt.colormaps() else plt.get_cmap(\"plasma\")\n",
+    "norm = colors.Normalize(vmin=y.min(), vmax=y.max())\n",
+    "\n",
+    "# -------- plot --------\n",
+    "fig = plt.figure(figsize=(11, 8))\n",
+    "ax = plt.gca()\n",
+    "\n",
+    "sc = ax.scatter(\n",
+    "    x, y,\n",
+    "    s=sizes,\n",
+    "    c=norm(y), cmap=cmap,\n",
+    "    alpha=0.85, edgecolor=\"k\", linewidths=0.3\n",
+    ")\n",
+    "\n",
+    "# quadrant lines\n",
+    "x_med, y_med = np.median(x), np.median(y)\n",
+    "#ax.axvline(x_med, linestyle=\"--\", linewidth=1, alpha=0.5)\n",
+    "#ax.axhline(y_med, linestyle=\"--\", linewidth=1, alpha=0.5)\n",
+    "\n",
+    "# -------- label top-4 by Total SITR --------\n",
+    "top4_idx = np.argsort(-tot)[:4]\n",
+    "xr = max(x.max() - x.min(), 1e-9)\n",
+    "yr = max(y.max() - y.min(), 1e-9)\n",
+    "dx0, dy0 = 0.06 * xr, 0.06 * yr\n",
+    "\n",
+    "# force NW arrows for these two if they are in the top-4\n",
+    "special_nw = {\"Bobby Okereke\", \"T.J. Edwards\"}\n",
+    "\n",
+    "for i in top4_idx:\n",
+    "    name = str(names[i])\n",
+    "\n",
+    "    # label offset direction\n",
+    "    if name in special_nw:\n",
+    "        dx, dy = -abs(dx0)-3, abs(dy0)-0.2   # NW\n",
+    "    else:\n",
+    "        dx = dx0 if x[i] >= x_med else -dx0\n",
+    "        dy = dy0 if y[i] >= y_med else -dy0\n",
+    "\n",
+    "    # arrow start position\n",
+    "    if name == \"Pete Werner\":\n",
+    "        # compute bubble radius in pixels from scatter size (points^2)\n",
+    "        r_pts = np.sqrt(sizes[i] / np.pi)              # points\n",
+    "        r_px  = r_pts * (fig.dpi / 72.0)               # pixels\n",
+    "        pad_px = 3.0                                   # tiny gap above the circle\n",
+    "\n",
+    "        # transform (x,y) -> display px, add vertical offset, transform back to data\n",
+    "        p_disp = ax.transData.transform((x[i], y[i]-0.15))\n",
+    "        p_top_disp = (p_disp[0], p_disp[1] + r_px + pad_px)\n",
+    "        x_start, y_start = ax.transData.inverted().transform(p_top_disp)\n",
+    "        start_xy = (x_start, y_start)\n",
+    "    else:\n",
+    "        start_xy = (x[i], y[i])\n",
+    "\n",
+    "    ann = ax.annotate(\n",
+    "        name,\n",
+    "        xy=start_xy,                           # arrow tail (starts at top of Pete's bubble)\n",
+    "        xytext=(x[i] + dx, y[i] + dy),         # label position\n",
+    "        textcoords=\"data\",\n",
+    "        fontsize=9,\n",
+    "        ha=\"left\", va=\"bottom\",\n",
+    "        arrowprops=dict(arrowstyle=\"-\", lw=0.9, alpha=0.9)\n",
+    "    )\n",
+    "    ann.set_path_effects([pe.withStroke(linewidth=2.5, foreground=\"white\")])\n",
+    "\n",
+    "# -------- cosmetics --------\n",
+    "cb = plt.colorbar(sc, ax=ax, pad=0.015)\n",
+    "cb.set_label(\"Average SITR\")\n",
+    "cb.remove()\n",
+    "\n",
+    "ax.set_xlabel(\"Tackle Opportunities\",fontsize=18)\n",
+    "ax.set_ylabel(\"Average Solo Tackle Impact Rating\",fontsize=18)\n",
+    "ax.set_title(\"Linebackers Tackle Efficiency and Volume\", fontsize=18, pad=10)\n",
+    "ax.grid(True, alpha=0.2)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"lb_efficiency_volume.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Optional save:\n",
+    "#plt.savefig(\"lb_efficiency_volume.png\", dpi=300, bbox_inches=\"tight\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import colors\n",
+    "import matplotlib.patheffects as pe\n",
+    "\n",
+    "# -------- data --------\n",
+    "df = db_df.copy()\n",
+    "\n",
+    "x = df[\"tackleOpportunities\"].astype(float).to_numpy()\n",
+    "y = df[\"Average SITR\"].astype(float).to_numpy()\n",
+    "tot = df[\"Total SITR\"].astype(float).to_numpy()\n",
+    "names = df[\"displayName\"].to_numpy()\n",
+    "\n",
+    "# bubble size (robust scaling)\n",
+    "smin, smax = np.percentile(tot, [5, 95])\n",
+    "sizes = 50 + 1500 * (np.clip(tot, smin, smax) - smin) / (smax - smin + 1e-9)\n",
+    "\n",
+    "# color by Average SITR\n",
+    "cmap = plt.get_cmap(\"turbo\") if \"turbo\" in plt.colormaps() else plt.get_cmap(\"plasma\")\n",
+    "norm = colors.Normalize(vmin=y.min(), vmax=y.max())\n",
+    "\n",
+    "# -------- plot --------\n",
+    "fig = plt.figure(figsize=(11, 8))\n",
+    "ax = plt.gca()\n",
+    "\n",
+    "sc = ax.scatter(\n",
+    "    x, y,\n",
+    "    s=sizes,\n",
+    "    c=norm(y), cmap=cmap,\n",
+    "    alpha=0.85, edgecolor=\"k\", linewidths=0.3\n",
+    ")\n",
+    "\n",
+    "# quadrant lines\n",
+    "x_med, y_med = np.median(x), np.median(y)\n",
+    "#ax.axvline(x_med, linestyle=\"--\", linewidth=1, alpha=0.5)\n",
+    "#ax.axhline(y_med, linestyle=\"--\", linewidth=1, alpha=0.5)\n",
+    "\n",
+    "# -------- label top-4 by Total SITR --------\n",
+    "# -------- label top-4 by Total SITR --------\n",
+    "top4_idx = np.argsort(-tot)[:4]\n",
+    "xr = max(x.max() - x.min(), 1e-9)\n",
+    "yr = max(y.max() - y.min(), 1e-9)\n",
+    "dx0, dy0 = 0.06 * xr, 0.06 * yr\n",
+    "\n",
+    "for i in top4_idx:\n",
+    "    name = str(names[i])\n",
+    "\n",
+    "    # vertical offset stays based on median\n",
+    "    dy = dy0 if y[i] >= y_med else -dy0\n",
+    "\n",
+    "    # force horizontal direction for specific players\n",
+    "    if name == \"Anthony Brown\":\n",
+    "        dx = -abs(dx0)-2  # go left\n",
+    "        dy = abs(dy0)-0.5\n",
+    "    elif name == \"Nate Hobbs\":\n",
+    "        dx =  abs(dx0)  # go right\n",
+    "        dy = abs(dy0) - 0.5\n",
+    "    else:\n",
+    "        dx = dx0 if x[i] >= x_med else -dx0  # default logic\n",
+    "\n",
+    "    ann = ax.annotate(\n",
+    "        name,\n",
+    "        xy=(x[i], y[i]),\n",
+    "        xytext=(x[i] + dx, y[i] + dy),\n",
+    "        textcoords=\"data\",\n",
+    "        fontsize=9,\n",
+    "        ha=\"left\", va=\"bottom\",\n",
+    "        arrowprops=dict(arrowstyle=\"-\", lw=0.9, alpha=0.9)\n",
+    "    )\n",
+    "    ann.set_path_effects([pe.withStroke(linewidth=2.5, foreground=\"white\")])\n",
+    "\n",
+    "# -------- cosmetics --------\n",
+    "# no colorbar (per your “slide bar” ban)\n",
+    "ax.set_xlabel(\"Tackle Opportunities\", fontsize=18)\n",
+    "ax.set_ylabel(\"Average Solo Tackle Impact Rating\", fontsize=18)\n",
+    "ax.set_title(\"Defensive Backs Tackle Efficiency and Volume\", fontsize=18, pad=10)\n",
+    "ax.grid(True, alpha=0.2)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"db_efficiency_volume.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Optional save:\n",
+    "#plt.savefig(\"db_bubble_top4.png\", dpi=300, bbox_inches=\"tight\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import colors\n",
+    "from matplotlib.ticker import FuncFormatter\n",
+    "\n",
+    "# --- values ---\n",
+    "db_vals = db_df[\"Average SITR\"].astype(float).to_numpy()\n",
+    "lb_vals = lb_df[\"Average SITR\"].astype(float).to_numpy()\n",
+    "\n",
+    "# --- shared bins ---\n",
+    "bins = 24\n",
+    "xmin = min(db_vals.min(), lb_vals.min())\n",
+    "xmax = max(db_vals.max(), lb_vals.max())\n",
+    "edges = np.linspace(xmin, xmax, bins + 1)\n",
+    "centers = 0.5 * (edges[:-1] + edges[1:])\n",
+    "bar_h = np.diff(edges)\n",
+    "\n",
+    "# compare shapes; set to False for counts\n",
+    "density = True\n",
+    "h_db, _ = np.histogram(db_vals, bins=edges, density=density)\n",
+    "h_lb, _ = np.histogram(lb_vals, bins=edges, density=density)\n",
+    "\n",
+    "# --- single colormap used for BOTH sides (same pattern) ---\n",
+    "cmap = plt.get_cmap(\"turbo\") if \"turbo\" in plt.colormaps() else plt.get_cmap(\"plasma\")\n",
+    "norm = colors.Normalize(vmin=centers.min(), vmax=centers.max())\n",
+    "colors_per_bin = [cmap(norm(c)) for c in centers]\n",
+    "\n",
+    "fig = plt.figure(figsize=(12, 7))\n",
+    "ax = plt.gca()\n",
+    "\n",
+    "# Bars: DB to the right, LB mirrored to the left\n",
+    "bars_db = ax.barh(centers,  h_db, height=bar_h, align=\"center\",\n",
+    "                  edgecolor=\"white\", linewidth=0.9, alpha=0.95, zorder=3)\n",
+    "bars_lb = ax.barh(centers, -h_lb, height=bar_h, align=\"center\",\n",
+    "                  edgecolor=\"white\", linewidth=0.9, alpha=0.95, zorder=3)\n",
+    "\n",
+    "# Apply identical color pattern on both sides\n",
+    "for rect, col in zip(bars_db, colors_per_bin):\n",
+    "    rect.set_facecolor(col)\n",
+    "for rect, col in zip(bars_lb, colors_per_bin):\n",
+    "    rect.set_facecolor(col)\n",
+    "\n",
+    "# Symmetric x-axis\n",
+    "m = max(h_db.max(), h_lb.max())\n",
+    "ax.set_xlim(-m * 1.2, m * 1.2)\n",
+    "ax.set_ylim(xmin, xmax)\n",
+    "\n",
+    "# Bold center divider\n",
+    "ax.axvline(0, color=\"black\", linewidth=5, alpha=0.95, zorder=5)\n",
+    "\n",
+    "# Colored medians (red = DB, blue = LB)\n",
+    "med_db = float(np.median(db_vals))\n",
+    "med_lb = float(np.median(lb_vals))\n",
+    "ax.axhline(med_db, linestyle=\"--\", linewidth=3.2, color=\"red\",  label=f\"DB median {med_db:.2f}\",  zorder=4)\n",
+    "ax.axhline(med_lb, linestyle=\"-.\", linewidth=3.2, color=\"blue\", label=f\"LB median {med_lb:.2f}\", zorder=4)\n",
+    "\n",
+    "# Huge side labels centered in each half (behind bars so they don't cover data)\n",
+    "ax.text(0.25, 0.50, \"LB\", color=\"blue\", fontsize=48, fontweight=\"bold\",\n",
+    "        ha=\"center\", va=\"center\", transform=ax.transAxes, alpha=0.16, zorder=1)\n",
+    "ax.text(0.75, 0.50, \"DB\", color=\"red\",  fontsize=48, fontweight=\"bold\",\n",
+    "        ha=\"center\", va=\"center\", transform=ax.transAxes, alpha=0.16, zorder=1)\n",
+    "\n",
+    "# Bigger title/labels/ticks\n",
+    "ax.set_title(\"Solo Tackle Impact Rating Distribution— Linebackers (left) vs Defensive Backs (right)\", fontsize=20, pad=12)\n",
+    "ax.set_xlabel(\"Density\" if density else \"Players\", fontsize=18)\n",
+    "ax.set_ylabel(\"Average SITR\", fontsize=18)\n",
+    "ax.tick_params(axis=\"both\", labelsize=13)\n",
+    "\n",
+    "# Pretty x-ticks: show absolute values\n",
+    "ax.xaxis.set_major_formatter(FuncFormatter(\n",
+    "    lambda v, pos: f\"{abs(v):.2f}\" if density else f\"{int(abs(v))}\"\n",
+    "))\n",
+    "\n",
+    "ax.grid(True, axis=\"x\", alpha=0.25)\n",
+    "ax.legend(frameon=False, loc=\"upper right\", fontsize=12)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"stir_db_vs_lb.png\", dpi=300, bbox_inches=\"tight\")  # high-res PNG\n",
+    "plt.show()\n"
    ]
   }
  ],
